[tool.poetry]
name = "callosum"
version = "0.1.0"
description = ""
authors = ["RyanBae <bohblue23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
async_timeout = "^3.0.1"
msgpack = "^1.0.0"
attrs = "^19.3.0"
aiotools = "^0.9.1"
zmq = "^0.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
